src/python/kquery-parser/KqueryParser.py
# Generated from Kquery.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KqueryParser ( Parser ):

    grammarFileName = "Kquery.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'symbolic'", "'['", "']'", "'array'", 
                     "':'", "'->'", "'='", "'('", "')'", "'@'", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Add'", "'Sub'", "'Mul'", "'UDiv'", "'URem'", "'SDiv'", 
                     "'Not'", "'And'", "'OR'", "'Xor'", "'Shl'", "'LShr'", 
                     "'AShr'", "'Eq'", "'Ne'", "'Ult'", "'Ule'", "'Ugt'", 
                     "'Uge'", "'Slt'", "'Sle'", "'Sgt'", "'Sge'", "'Concat'", 
                     "'Extract'", "'ZExt'", "'SExt'", "'Read'", "'Select'", 
                     "'Neg'", "'ReadLSB'", "'ReadMSB'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "NUMBER", "TRUE", "FALSE", "SIGNED_CONSTANT", 
                      "DEC_CONSTANT", "BIN_CONSTANT", "OCT_CONSTANT", "HEX_CONSTANT", 
                      "TYPE", "ADD", "SUB", "MUL", "UDIV", "UREM", "SDIV", 
                      "NOT", "AND", "OR", "XOR", "SHL", "LSHR", "ASHR", 
                      "EQ", "NE", "ULT", "ULE", "UGT", "UGE", "SLT", "SLE", 
                      "SGT", "SGE", "CONCAT", "EXTRACT", "ZEXT", "SEXT", 
                      "READ", "SELECT", "NEG", "READLSB", "READMSB", "IDENTIFIER" ]

    RULE_number_list = 0
    RULE_array_initializer = 1
    RULE_array_declaration = 2
    RULE_arithmetic_expr_kind = 3
    RULE_bitwise_expr_kind = 4
    RULE_comparison_expr_kind = 5
    RULE_prog = 6
    RULE_number_with_type = 7
    RULE_bv_expr_kind = 8
    RULE_extension_expr_kind = 9
    RULE_read_expr_kind = 10
    RULE_select_expr_kind = 11
    RULE_neg_expr_kind = 12
    RULE_array_read_expr_kind = 13
    RULE_identifier = 14
    RULE_number = 15
    RULE_type = 16
    RULE_definition = 17
    RULE_arithmetic_expr = 18
    RULE_bitwise_expr = 19
    RULE_comparison_expr = 20
    RULE_bv_expr = 21
    RULE_extension_expr = 22
    RULE_read_expr = 23
    RULE_select_expr = 24
    RULE_neg_expr = 25
    RULE_array_read_expr = 26
    RULE_expr = 27
    RULE_update_list = 28
    RULE_version = 29

    ruleNames =  [ "number_list", "array_initializer", "array_declaration", 
                   "arithmetic_expr_kind", "bitwise_expr_kind", "comparison_expr_kind", 
                   "prog", "number_with_type", "bv_expr_kind", "extension_expr_kind", 
                   "read_expr_kind", "select_expr_kind", "neg_expr_kind", 
                   "array_read_expr_kind", "identifier", "number", "type", 
                   "definition", "arithmetic_expr", "bitwise_expr", "comparison_expr", 
                   "bv_expr", "extension_expr", "read_expr", "select_expr", 
                   "neg_expr", "array_read_expr", "expr", "update_list", 
                   "version" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    WS=12
    NUMBER=13
    TRUE=14
    FALSE=15
    SIGNED_CONSTANT=16
    DEC_CONSTANT=17
    BIN_CONSTANT=18
    OCT_CONSTANT=19
    HEX_CONSTANT=20
    TYPE=21
    ADD=22
    SUB=23
    MUL=24
    UDIV=25
    UREM=26
    SDIV=27
    NOT=28
    AND=29
    OR=30
    XOR=31
    SHL=32
    LSHR=33
    ASHR=34
    EQ=35
    NE=36
    ULT=37
    ULE=38
    UGT=39
    UGE=40
    SLT=41
    SLE=42
    SGT=43
    SGE=44
    CONCAT=45
    EXTRACT=46
    ZEXT=47
    SEXT=48
    READ=49
    SELECT=50
    NEG=51
    READLSB=52
    READMSB=53
    IDENTIFIER=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Number_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(KqueryParser.NUMBER, 0)

        def number_list(self):
            return self.getTypedRuleContext(KqueryParser.Number_listContext,0)


        def getRuleIndex(self):
            return KqueryParser.RULE_number_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber_list" ):
                listener.enterNumber_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber_list" ):
                listener.exitNumber_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber_list" ):
                return visitor.visitNumber_list(self)
            else:
                return visitor.visitChildren(self)




    def number_list(self):

        localctx = KqueryParser.Number_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_number_list)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(KqueryParser.NUMBER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(KqueryParser.NUMBER)
                self.state = 62
                self.match(KqueryParser.T__0)
                self.state = 63
                self.number_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_initializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number_list(self):
            return self.getTypedRuleContext(KqueryParser.Number_listContext,0)


        def getRuleIndex(self):
            return KqueryParser.RULE_array_initializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_initializer" ):
                listener.enterArray_initializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_initializer" ):
                listener.exitArray_initializer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_initializer" ):
                return visitor.visitArray_initializer(self)
            else:
                return visitor.visitChildren(self)




    def array_initializer(self):

        localctx = KqueryParser.Array_initializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_array_initializer)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(KqueryParser.T__1)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(KqueryParser.T__2)
                self.state = 68
                self.number_list()
                self.state = 69
                self.match(KqueryParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(KqueryParser.IDENTIFIER, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(KqueryParser.TYPE)
            else:
                return self.getToken(KqueryParser.TYPE, i)

        def array_initializer(self):
            return self.getTypedRuleContext(KqueryParser.Array_initializerContext,0)


        def NUMBER(self):
            return self.getToken(KqueryParser.NUMBER, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_array_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_declaration" ):
                listener.enterArray_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_declaration" ):
                listener.exitArray_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_declaration" ):
                return visitor.visitArray_declaration(self)
            else:
                return visitor.visitChildren(self)




    def array_declaration(self):

        localctx = KqueryParser.Array_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(KqueryParser.T__4)
            self.state = 74
            self.match(KqueryParser.IDENTIFIER)
            self.state = 75
            self.match(KqueryParser.T__2)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 76
                self.match(KqueryParser.NUMBER)


            self.state = 79
            self.match(KqueryParser.T__3)
            self.state = 80
            self.match(KqueryParser.T__5)
            self.state = 81
            self.match(KqueryParser.TYPE)
            self.state = 82
            self.match(KqueryParser.T__6)
            self.state = 83
            self.match(KqueryParser.TYPE)
            self.state = 84
            self.match(KqueryParser.T__7)
            self.state = 85
            self.array_initializer()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arithmetic_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(KqueryParser.ADD, 0)

        def SUB(self):
            return self.getToken(KqueryParser.SUB, 0)

        def MUL(self):
            return self.getToken(KqueryParser.MUL, 0)

        def UDIV(self):
            return self.getToken(KqueryParser.UDIV, 0)

        def UREM(self):
            return self.getToken(KqueryParser.UREM, 0)

        def SDIV(self):
            return self.getToken(KqueryParser.SDIV, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_arithmetic_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmetic_expr_kind" ):
                listener.enterArithmetic_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmetic_expr_kind" ):
                listener.exitArithmetic_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmetic_expr_kind" ):
                return visitor.visitArithmetic_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def arithmetic_expr_kind(self):

        localctx = KqueryParser.Arithmetic_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arithmetic_expr_kind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 264241152) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bitwise_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(KqueryParser.AND, 0)

        def OR(self):
            return self.getToken(KqueryParser.OR, 0)

        def XOR(self):
            return self.getToken(KqueryParser.XOR, 0)

        def SHL(self):
            return self.getToken(KqueryParser.SHL, 0)

        def LSHR(self):
            return self.getToken(KqueryParser.LSHR, 0)

        def ASHR(self):
            return self.getToken(KqueryParser.ASHR, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_bitwise_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBitwise_expr_kind" ):
                listener.enterBitwise_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBitwise_expr_kind" ):
                listener.exitBitwise_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitwise_expr_kind" ):
                return visitor.visitBitwise_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def bitwise_expr_kind(self):

        localctx = KqueryParser.Bitwise_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bitwise_expr_kind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 33822867456) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comparison_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(KqueryParser.EQ, 0)

        def NE(self):
            return self.getToken(KqueryParser.NE, 0)

        def ULT(self):
            return self.getToken(KqueryParser.ULT, 0)

        def ULE(self):
            return self.getToken(KqueryParser.ULE, 0)

        def UGT(self):
            return self.getToken(KqueryParser.UGT, 0)

        def UGE(self):
            return self.getToken(KqueryParser.UGE, 0)

        def SLT(self):
            return self.getToken(KqueryParser.SLT, 0)

        def SLE(self):
            return self.getToken(KqueryParser.SLE, 0)

        def SGT(self):
            return self.getToken(KqueryParser.SGT, 0)

        def SGE(self):
            return self.getToken(KqueryParser.SGE, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_comparison_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison_expr_kind" ):
                listener.enterComparison_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison_expr_kind" ):
                listener.exitComparison_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison_expr_kind" ):
                return visitor.visitComparison_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def comparison_expr_kind(self):

        localctx = KqueryParser.Comparison_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comparison_expr_kind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 35150012350464) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KqueryParser.ExprContext)
            else:
                return self.getTypedRuleContext(KqueryParser.ExprContext,i)


        def getRuleIndex(self):
            return KqueryParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = KqueryParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.expr()
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 18014398509490728) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Number_with_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(KqueryParser.TYPE, 0)

        def NUMBER(self):
            return self.getToken(KqueryParser.NUMBER, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_number_with_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber_with_type" ):
                listener.enterNumber_with_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber_with_type" ):
                listener.exitNumber_with_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber_with_type" ):
                return visitor.visitNumber_with_type(self)
            else:
                return visitor.visitChildren(self)




    def number_with_type(self):

        localctx = KqueryParser.Number_with_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_number_with_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(KqueryParser.TYPE)
            self.state = 99
            self.match(KqueryParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bv_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONCAT(self):
            return self.getToken(KqueryParser.CONCAT, 0)

        def EXTRACT(self):
            return self.getToken(KqueryParser.EXTRACT, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_bv_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBv_expr_kind" ):
                listener.enterBv_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBv_expr_kind" ):
                listener.exitBv_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBv_expr_kind" ):
                return visitor.visitBv_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def bv_expr_kind(self):

        localctx = KqueryParser.Bv_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bv_expr_kind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if not(_la==45 or _la==46):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Extension_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ZEXT(self):
            return self.getToken(KqueryParser.ZEXT, 0)

        def SEXT(self):
            return self.getToken(KqueryParser.SEXT, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_extension_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtension_expr_kind" ):
                listener.enterExtension_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtension_expr_kind" ):
                listener.exitExtension_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtension_expr_kind" ):
                return visitor.visitExtension_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def extension_expr_kind(self):

        localctx = KqueryParser.Extension_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_extension_expr_kind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            _la = self._input.LA(1)
            if not(_la==47 or _la==48):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Read_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(KqueryParser.READ, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_read_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead_expr_kind" ):
                listener.enterRead_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead_expr_kind" ):
                listener.exitRead_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead_expr_kind" ):
                return visitor.visitRead_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def read_expr_kind(self):

        localctx = KqueryParser.Read_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_read_expr_kind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(KqueryParser.READ)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(KqueryParser.SELECT, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_select_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_expr_kind" ):
                listener.enterSelect_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_expr_kind" ):
                listener.exitSelect_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_expr_kind" ):
                return visitor.visitSelect_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def select_expr_kind(self):

        localctx = KqueryParser.Select_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_select_expr_kind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(KqueryParser.SELECT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Neg_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEG(self):
            return self.getToken(KqueryParser.NEG, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_neg_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeg_expr_kind" ):
                listener.enterNeg_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeg_expr_kind" ):
                listener.exitNeg_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeg_expr_kind" ):
                return visitor.visitNeg_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def neg_expr_kind(self):

        localctx = KqueryParser.Neg_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_neg_expr_kind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(KqueryParser.NEG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_read_expr_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READLSB(self):
            return self.getToken(KqueryParser.READLSB, 0)

        def READMSB(self):
            return self.getToken(KqueryParser.READMSB, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_array_read_expr_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_read_expr_kind" ):
                listener.enterArray_read_expr_kind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_read_expr_kind" ):
                listener.exitArray_read_expr_kind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_read_expr_kind" ):
                return visitor.visitArray_read_expr_kind(self)
            else:
                return visitor.visitChildren(self)




    def array_read_expr_kind(self):

        localctx = KqueryParser.Array_read_expr_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_array_read_expr_kind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not(_la==52 or _la==53):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(KqueryParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return KqueryParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):
